<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="umeng_channel">积分宝</string>
    
    <string name="app_name">积分宝</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="confirm">确定</string>
    <string name="login">登录</string>
    <string name="registe">注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="point">获取更多积分</string>
    <string name="user_not_exist">用户不存在，请先注册</string>
    <string name="user_exist">此用户已经存在，请更换用户名</string>
    <string name="user_or_password_empty">用户名密码不能为空</string>
    <string name="password_error">用户名密码不正确</string>
    <string name="logining">正在登录中，请稍后...</string>
    <string name="registe_tips">正在注册中，请稍后...</string>
    <string name="loading">正在加载中，请稍后...</string>
    
    <string name="version_info" formatted="false">版本号:%s</string>
    
    <string name="refresh">刷新积分</string>
    <string name="about">关于</string>
    
    <string name="login_title_tips">绝对免费获取积分</string>
    <string name="current_point" formatted="false">您当前的金币数是:%s个金币</string>
    <string name="offer_download_cute_tips">温馨提示:下载应用以后请一定使用应用1分钟以上，才能获得金币哦。如果在几分钟内不能获得金币，请不要删除应用，一段时间以后会获得金币。</string>
    <string name="content_tips">积分宝是一款可以给多个应用提供积分的应用，不同应用使用同一帐号登录以后，积分宝就可以为第三方应用提供积分服务。</string>
    
    <string name="main_tips">积分宝是一款可以给多个应用提供积分的应用，不同应用使用同一帐号登录以后，积分宝就可以为第三方应用提供积分服务。目前支持积分宝的服务有:肉丝写真，美腿丝袜，第四印象，邪恶漫画等。</string>

</resources>
