<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="@drawable/actionbar_shadow" >
    </ImageView>

    <Button
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:textAppearance="?android:attr/textAppearanceLargeInverse"
        android:textColor="@drawable/black" />

    <Button
        android:id="@+id/registe"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_below="@id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/registe"
        android:textAppearance="?android:attr/textAppearanceLargeInverse"
        android:textColor="@drawable/black" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@id/login"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/actionbar_friend_page_search_box_underline"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@drawable/black" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@id/password"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/actionbar_friend_page_search_box_underline"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@drawable/black" />

    <TextView
        android:id="@+id/content_tips"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/registe"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/content_tips"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@drawable/gray5" />

    <TextView
        android:id="@+id/free_tips"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/username"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/login_title_tips"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#385E0F"
        android:textStyle="bold" />

</RelativeLayout>